--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 python-dotenv==1.0.1
 tenacity!=8.4.0
-langchain==0.2.3
-openai==1.33.0
-langchain-openai==0.1.8
-neo4j-driver==5.21.0
-langchainhub==0.1.18
-langchain-community==0.2.4
+langchain==0.3.9
+openai==1.56.0
+langchain-openai==0.2.10
+neo4j==5.27.0
+langchainhub==0.1.21
+langchain-neo4j==0.1.1
+langchain-community==0.3.9
 youtube-search==2.1.2
 colorama==0.4.6
