--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ neo4j==5.27.0
 langchainhub==0.1.21
 langchain-neo4j==0.1.1
 langchain-community==0.3.9
+langchain-experimental==0.3.3
 youtube-search==2.1.2
 colorama==0.4.6
